Fix broken inputs

--- a/ckanext/amplus/assets/sass/_forms.scss
+++ b/ckanext/amplus/assets/sass/_forms.scss
@@ -136,7 +136,7 @@
   }
 }
 
-.form-group {
+.form-group-display-end {
   display: flex;
   justify-content: flex-end;
 }
